# simple-panel

./: LICENSE  README.md  meson.build
data/: config.ini  meson.build  simple_panel.gresource.xml
data/status_service/: StatusNotifierItem.xml  StatusNotifierWatcher.xml  status_service.gresource.xml
data/styles/: clock-styles.css  launcher-styles.css  menu-styles.css  monitor-styles.css  panel-base.css  showdesktop-styles.css  systray-styles.css  tasklist-styles.css
po/: LINGUAS  POTFILES.in  es.po  meson.build  simple-panel.pot
src/: config.c  config.h  i18n.c  i18n.h  main.c  panel.c  panel.h
src/plugins/: app_menu_button.c  app_menu_button.h  clock_widget.c  clock_widget.h  cpu_monitor_widget.c  cpu_monitor_widget.h  launcher_widget.c  launcher_widget.h  net_monitor_widget.c  net_monitor_widget.h  ram_monitor_widget.c  ram_monitor_widget.h  showdesktop_widget.c  showdesktop_widget.h  systray_widget.c  systray_widget.h  tasklist_widget.c  tasklist_widget.h
